# me-575-final-project

./: .gitignore  .gitmodules  ME575 - Final Project Proposal - Submitted.md  README.md  pyproject.toml
datasets/conversations/: conv_academic_disguise.json  conv_creative_excuse.json  conv_crescendo_misinfo.json  conv_crescendo_misinfo_teacher.json  conv_crescendo_subtle.json  conv_cybersecurity_escalation.json  conv_direct_hostile.json  conv_escalation_harassment.json  conv_gradual_normalization.json  conv_injection_dan_variations.json  conv_mental_health_crisis.json  conv_multi_jailbreak_attempts.json  conv_obfuscation_multiple.json  conv_payload_split_malware.json  conv_payload_splitting.json  conv_safe_debate.json  conv_safe_educational.json  conv_safe_security.json  conv_safe_technical.json  conv_safe_topic_drift.json  conv_trust_building_then_attack.json
datasets/prompts/: academic_disguise.json  adversarial_suffix_001.json  adversarial_suffix_authority.json  adversarial_suffix_emotional.json  (+80 more)
evidence/: README.md  classification_harmful_content.html  classification_jailbreak.html  classification_prompt_injection.html  drift_ensemble_vs_safety_classifier.html  evaluation_summary.md  evidence_package.json  metric_summary.json  release_gate_decision.md
safejudge/: __init__.py  __main__.py  config.py  dataset.py  evidence_package.py  gates.py  judge.py  metrics.py  reports.py  runner.py
scripts/: generate_dataset.py  render_architecture.py
tests/: test_dataset.py  test_gates.py  test_integration.py  test_judge.py  test_metrics.py  test_runner.py
